<resources>
    <string name="app_name">PracticumHomeWork</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="empty">Пустой экран</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_request">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_2">Поиск</string>
    <string name="hint_search">Поиск</string>
    <string name="message">Яндекс Практикум</string>
    <string name="email">yourEmail@ya.ru</string>
    <string name="mailto">mailto:</string>
    <string name="agreement_site_email">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_email">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="text_pattern">text/plain</string>
    <string name="track_details_button">Track details button</string>
    <string name="divider">divider</string>
    <string name="back_button">Back button</string>
    <string name="track_cover">track cover</string>
    <string name="clear_search_request">clear search request</string>
    <string name="found_null">Ничего не нашлось</string>
    <string name="lost_connection_text">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched_up">Вы искали</string>
    <string name="delete_history">Очистить историю</string>
    <string name="track_poster">track poster</string>
    <string name="track_duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="country">Страна</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="dont_have_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="SomethingWentWrong">Что-то пошло не так.</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="adding_to_playlist_success">Добавлено в плейлист %1$s</string>
    <string name="adding_to_playlist_declined">Трек уже добавлен в плейлист %1$s</string>
    <string name="needed_permission">Нужно разрешение</string>
    <string name="fully_create_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_information_deleted">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="new_playlisst">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_track_dialogue">Хотите удалить трек?</string>
    <string name="yes_dialogue">ДА</string>
    <string name="no_dialogue">НЕТ</string>
    <string name="playlist_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_details">Редактировать информацию</string>
    <string name="share">Поделиться</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="edit_playlist_toolbar_text">Редактировать</string>
    <string name="save_text">Сохранить</string>
    <string name="name_of_playlist">Название*</string>
    <string name="empty_playlist_id">Empty Playlist Id</string>
</resources>