<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_url"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/track_cover"
        android:layout_marginEnd="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/track_name"
            style="@style/track_name_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ys_text_regular"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/track_info_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ys_text_regular"
            android:maxLines="1"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/point"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_name" />

        <ImageView
            android:id="@+id/point"
            style="@style/track_info_point"
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/artist_name"
            app:layout_constraintEnd_toStartOf="@+id/track_time"
            app:layout_constraintStart_toEndOf="@+id/artist_name"
            app:layout_constraintTop_toTopOf="@id/artist_name"
            android:src="@drawable/ellipse_1"
            android:contentDescription="@string/divider" />

        <TextView
            android:id="@+id/track_time"
            style="@style/track_info_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_regular"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@id/artist_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/point"
            app:layout_constraintTop_toTopOf="@id/artist_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/button_more"
        style="@style/track_details_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/track_details_button"
        android:paddingHorizontal="4dp"
        android:src="@drawable/ic_baseline_navigate_next_24" />
</LinearLayout>
